5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4126/executions/1785_3124.log
== TEST (2019-05-30 10:19:00) 
-- CODE:
from numpy import*

vet = array(eval(input(" media deles":)))

media = 0
while(i>size(vet)):
	media = media + vet[1]
	i = i + 1

print(round(media,2))
-- ERROR:
File "XXXX", line 3
    vet = array(eval(input(" media deles":)))
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:20:28) 
-- CODE:
from numpy import*

vetor = array(eval(input("med":)))

media = 0
while(i>size(vetor)):
	media = media + vet[1]
	i = i + 1

print(round(media,2))
-- ERROR:
File "XXXX", line 3
    vetor = array(eval(input("med":)))
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:20:48) 
-- CODE:
from numpy import*

vetor = array(eval(input("med":)))
i = 0
media = 0
while(i>size(vetor)):
	media = media + vet[1]
	i = i + 1

print(round(media,2))
-- ERROR:
File "XXXX", line 3
    vetor = array(eval(input("med":)))
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:21:28) 
-- CODE:
from numpy import*
vetor = array(eval(input("med":)))

i = 0
media = 0
while(i>size(vetor)):
	media = media * vet[1]
	i = i + 1

print(round(media,2))
-- ERROR:
File "XXXX", line 2
    vetor = array(eval(input("med":)))
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:22:09) 
-- CODE:
from numpy import*
vetor = array(eval(input("med":)))

i = 0
media = 0
while(i>size(vetor)):
	media = media * vet[1]
	i = i + 1

print(round(media,2))
-- ERROR:
File "XXXX", line 2
    vetor = array(eval(input("med":)))
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:22:18) 
-- CODE:
from numpy import*
vector = array(eval(input("med":)))

i = 0
media = 0
while(i>size(vetor)):
	media = media * vet[1]
	i = i + 1

print(round(media,2))
-- ERROR:
File "XXXX", line 2
    vector = array(eval(input("med":)))
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:22:39) 
-- CODE:
from numpy import*
vector = array(eval(input("med":)))

i = 0
media = 0
while(i>size(vetor)):
	media = media * vet[1]
	i = i + 1

print(round(media,2))
-- ERROR:
File "XXXX", line 2
    vector = array(eval(input("med":)))
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:22:49) 
-- CODE:
from numpy import*
vector = array(eval(input("medidas":)))

i = 0
media = 0
while(i>size(vetor)):
	media = media * vet[1]
	i = i + 1

print(round(media,2))
-- ERROR:
File "XXXX", line 2
    vector = array(eval(input("medidas":)))
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:23:27) 
-- CODE:
from numpy import*
vector = array(eval(input("medidas: ")))

i = 0
media = 0
while(i>size(vetor)):
	media = media * vet[1]
	i = i + 1

print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:23:34) 
-- CODE:
from numpy import*
vector = array(eval(input("med: ")))

i = 0
media = 0
while(i>size(vetor)):
	media = media * vet[1]
	i = i + 1

print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:25:28) 
-- CODE:
from numpy import*
vetor = array(eval(input("med: ")))

i = 0
media = 1
while(i>size(vetor)):
	media = media * vet[1]
	i = i + 1

print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:25:50) 
-- CODE:
from numpy import*
vetor = array(eval(input("med: ")))

i = 0
media = 1
while(i>size(vetor)):
	media = media * vet[1]
	i = i + 1

print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:26:11) 
-- CODE:
from numpy import*
vetor = array(eval(input("med: ")))

i = 0
media = 1
while(i>size(vetor)):
	media = media * vet[1]
	i = i + 1

print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:30:40) 
-- CODE:
from numpy import*
vet = array(eval(input("med: ")))

i = 0
media = 1
while(i>size(vet)):
	media = (media * vet[1]**
	i = i + 1

print(round(media,2))
-- ERROR:
File "XXXX", line 8
    i = i + 1
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:31:01) 
-- CODE:
from numpy import*
vetor = array(eval(input("med: ")))

i = 0
media = 1
while(i>size(vetor)):
	media = (media * vetor[1]**
	i = i + 1

print(round(media,2))
-- ERROR:
File "XXXX", line 8
    i = i + 1
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:31:40) 
-- CODE:
from numpy import*
vetor = array(eval(input("med: ")))

i = 0
media = 1
while(i>size(vetor)):
	media = (media * vetor[1])**(1/size(vetor))
	i = i + 1

print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:32:05) 
-- CODE:
from numpy import*
vetor = array(eval(input("med: ")))

i = 0
media = 1
while(i>size(vetor)):
	media = (media * vetor[1])**(1/size(vetor))
	i = i + 1

print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:32:49) 
-- CODE:
from numpy import*
vetor = array(eval(input("med: ")))

i = 0
media = 1
while(i<size(vetor)):
	media = (media * vetor[1])**(1/size(vetor))
	i = i + 1

print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:33:15) 
-- CODE:
from numpy import*
vetor = array(eval(input("med: ")))

i = 0
media = 1
while(i<size(vetor)):
	media = (media * vetor[i])**(1/size(vetor))
	i = i + 1

print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:33:39) 
-- CODE:
from numpy import*
vetor = array(eval(input("med: ")))

i = 0
media = 1
while(i<size(vetor)):
	media = (media * vetor[i])**(1/size(vetor))
	i = i + 1

print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:38:28) 
-- CODE:
from numpy import*
vetor = array(eval(input("medida: ")))

i = 0
media = 1
while(i<size(vetor)):
	med = (med * vetor[i])
	i = i + 1

print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:39:45) 
-- CODE:
from numpy import*
vetor = array(eval(input("medida: ")))

i = 0
media = 1
while(i<size(vetor)):
	med = (med * vetor[i])
	i = i + 1
media = (med)**(1/size(vetor))
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:40:02) 
-- CODE:
from numpy import*
vetor = array(eval(input("medida: ")))

i = 0
med = 1
while(i<size(vetor)):
	med = (med * vetor[i])
	i = i + 1
media = (med)**(1/size(vetor))
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 10:40:09) 
-- CODE:
from numpy import*
vetor = array(eval(input("medida: ")))

i = 0
med = 1
while(i<size(vetor)):
	med = (med * vetor[i])
	i = i + 1
media = (med)**(1/size(vetor))
print(round(media,2))
-- EXECUTION TIME:
0.363444
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.44
---- user output:
4.44
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.29
---- user output:
3.29
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.72
---- user output:
2.72
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
